--- a/views/partials/bookings.html
+++ b/views/partials/bookings.html
@@ -12,7 +12,7 @@
                     <div class="inner">
                         <section id="innercard">
                             <p>Find comfortable hotels with your favorite ammenities.</p>
-                            <a id="link" href="#">Add to Itinerary</a>
+                            <a id="link" href="#">View Hotels</a>
                         </section>
                     </div>
                 </div>
@@ -29,8 +29,10 @@
                 <div class="back" style="background-image: url(/images/local.jpeg)">
                     <div class="inner">
                         <section id="innercard">
-                            <p>The locals love to host travelers and adventurers! Stay with the locals and possibly learn about their favorite activies and the best kept secrets of the <area shape="" coords="" href="" alt=""></p>
-                            <a id="link" href="#">Add to Itinerary</a>
+                            <p>Stay with the locals and possibly
+                                learn about their favorite activies and the best kept secrets.<area shape="" coords=""
+                                    href="" alt=""></p>
+                            <a id="link" href="#">View Local Stays</a>
                         </section>
                     </div>
                 </div>
@@ -48,8 +50,9 @@
                 <div class="back" style="background-image: url(/images/camp.jpeg)">
                     <div class=" inner">
                         <section id="innercard">
-                            <p>Explore what nature has to offer and make new friends at some of the most beautiful campsites in the country!</p>
-                            <a id="link" href="#">Add to Itinerary</a>
+                            <p>Explore what nature has to offer and make new friends at some of the most beautiful
+                                campsites in the country.</p>
+                            <a id="link" href="#">View Campsites</a>
                         </section>
                     </div>
                 </div>
