--- a/views/partials/locations.html
+++ b/views/partials/locations.html
@@ -12,10 +12,8 @@
                 <div class="back" style="background-image: url(/images/bigbend.webp)">
                     <div class="inner">
                         <section id="innercard">
-                            <p>There is a place in Far West Texas where night skies are dark as coal and rivers carve
-                                temple-like canyons in ancient limestone. Here, at the end of the road, hundreds of bird
-                                species take refuge in a solitary mountain range surrounded by weather-beaten desert.
-                            </p>
+                            <p>Night skies are dark as coal and rivers carve
+                                temple-like canyons in ancient limestone. </p>
                             <form action="/itinerary/" method="POST">
                                 <a id="link" href="#">Add to Itinerary</a>
                             </form>
@@ -36,10 +34,10 @@
                 <div class="back" style="background-image: url(/images/backpackingwoods.jpg)">
                     <div class="inner">
                         <section id="innercard">
-                            <p>Barnwell Mountain Recreation Area Loop is a 10 mile lightly trafficked loop trail located
-                                near Gilmer, Texas that offers scenic views and is rated as moderate. The trail offers a
-                                number of activity options.</p>
-                            <a id="link" href="#">Add to Itinerary</a>
+                            <p>Scenic views and rated as moderate,the trail offers a number of activity options.</p>
+                            <form action="/itinerary/" method="POST">
+                                <a id="link" href="#">Add to Itinerary</a>
+                            </form>
                         </section>
                     </div>
                 </div>
@@ -57,11 +55,11 @@
                 <div class="back" style="background-image: url(/images/goodwater.jpeg)">
                     <div class="inner">
                         <section id="innercard">
-                            <p>Good Water Loop is a 26.9 mile heavily trafficked loop trail located near Georgetown,
-                                Texas that features a lake and is rated as moderate. The trail offers a number of
-                                activity options and is accessible year-round. Dogs are also able to use this trail but
-                                must be kept on leash.</p>
-                            <a id="link" href="#">Add to Itinerary</a>
+                            <p>The trail offers a number of
+                                activity options and is accessible year-round. Dogs are also able to use this trail!</p>
+                            <form action="/itinerary/" method="POST">
+                                <a id="link" href="#">Add to Itinerary</a>
+                            </form>
                         </section>
                     </div>
                 </div>
@@ -79,10 +77,11 @@
                 <div class="back" style="background-image: url(/images/huecotanks.jpeg)">
                     <div class="inner">
                         <section id="innercard">
-                            <p>Formed thirty four million years ago when
-                                magma entered an older limestone formation and then cooled, the Hueco geology emerged as
+                            <p>Hueco geology emerged as
                                 weather eroded away the limestone and carved the odd sculptural hoodoos seen today.</p>
-                            <a id="link" href="#">Add to Itinerary</a>
+                            <form action="/itinerary/" method="POST">
+                                <a id="link" href="#">Add to Itinerary</a>
+                            </form>
                         </section>
                     </div>
                 </div>
@@ -100,11 +99,11 @@
                 <div class="back" style="background-image: url(/images/enchantedrock.jpeg)">
                     <div class="inner">
                         <section id="innercard">
-                            <p>The massive pink granite dome rising above Central Texas has drawn people for thousands
-                                of years. The
-                                scenery, rock formations and legends are magical, too! Enjoy hiking, backpacking, rock
+                            <p>Enjoy hiking, backpacking, rock
                                 climbing, camping, and stargazing. Enchanted Rock offers 11 miles of trails.</p>
-                            <a id="link" href="#">Add to Itinerary</a>
+                            <form action="/itinerary/" method="POST">
+                                <a id="link" href="#">Add to Itinerary</a>
+                            </form>
                         </section>
                     </div>
                 </div>
@@ -123,9 +122,10 @@
                     <div class="inner">
                         <section id="innercard">
                             <p>Padre Island National Seashore separates the Gulf of Mexico from the Laguna Madre, one of
-                                a few hypersaline lagoons in the world. The park protects 70 miles of coastline, dunes,
-                                prairies, and wind tidal flats teeming with life.</p>
-                            <a id="link" href="#">Add to Itinerary</a>
+                                a few hypersaline lagoons in the world.</p>
+                            <form action="/itinerary/" method="POST">
+                                <a id="link" href="#">Add to Itinerary</a>
+                            </form>
                         </section>
                     </div>
                 </div>
