--- a/views/partials/login.html
+++ b/views/partials/login.html
@@ -1,14 +1,14 @@
 <form action="/users/login" method="POST">
 
     <div class="form-group">
-        <input type="text" name= "email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="User Name">
+        <input type="text" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Email Address">
     </div>
 
     <div class="form-group">
-        <input type="password" name= "password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Log In</button>
 
 </form>
